--- a/templates/photo/index.html
+++ b/templates/photo/index.html
@@ -4,7 +4,7 @@
 <head>
 {% load staticfiles %}
 	<meta charset="utf-8">
-    <title>EAS</title>
+    <title>Eka Ade Saputra | Gallery</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -35,7 +35,7 @@
 				<a href="https://www.facebook.com/Ekadesaputra?fref=ts" target="_blank"><i class="fa fa-facebook"></i></a> <!-- your facebook link -->
 				<a href="https://www.instagram.com/ekaadesaputra" target="_blank"><i class="fa fa-instagram"></i></a> <!-- your linkedin link -->
 				<!-- <a href=""><i class="fa fa-pinterest"></i></a> your pinterest link -->
-				<a href="#" data-toggle="popover" data-placement="left"  data-trigger="focus" data-content="sekaadeputra@gmail.com"><i class="fa fa-envelope"></i></a> <!-- your email address -->
+				<a href="#" data-toggle="popover" data-placement="bottom"  data-trigger="focus" data-content="sekaadeputra@gmail.com"><i class="fa fa-envelope"></i></a> <!-- your email address -->
 			</div>
 			
 		</div>
