--- a/templates/photo/index.html
+++ b/templates/photo/index.html
@@ -29,7 +29,7 @@
 			
 		<div class="container">
 			
-			<div class="logo pull-left">ekaade.<span class="text-muted"> silent thinking and doing</span></div>
+			<div class="logo pull-left"><img src="{% static 'assets/img/eas-logo.png' %}" alt=""></div>
 			
 			<div class="socials pull-right">
 				<a href="https://twitter.com/ekadesaputra" target="_blank"><i class="fa fa-twitter"></i></a> <!-- your twitter link -->
