--- a/static/assets/css/photographer.css
+++ b/static/assets/css/photographer.css
@@ -1,5 +1,13 @@
 
 /* General Styles */
+@font-face {
+    font-family: 'punavuori';
+    src: url('punavuor-webfont.woff2') format('woff2'),
+         url('punavuor-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
 
 body {
 	background: url(../img/bg.jpg);
@@ -28,7 +36,7 @@ h1, h2, h3, h4, h5, h6 {
 /* Masthead */
 
 .logo {
-	margin: 20px 0;
+	margin: 13px 0 20px 0;
 	color: #EEE;
 	float: left;
 	text-align: center;
@@ -39,6 +47,11 @@ h1, h2, h3, h4, h5, h6 {
 	text-shadow: 0px 1px 1px #000;
 }
 
+.logo img {
+	height: 30px;
+	width: 65px;
+}
+
 .logo span {
 	font-weight: 400;
 	color: #AAA;
@@ -46,7 +59,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .masthead {
-	background: url(../img/headerbg.jpg);
+	background: #3c3b37;
 	position: fixed;
 	top: 0;
 	left: 0;
@@ -186,11 +199,15 @@ h1, h2, h3, h4, h5, h6 {
 .filter-nav li a {
 
 	display:inline-block;
-	font-size:18px;
+	font-size:13px;
 	padding:4px 18px;
 	text-decoration:none;
 	text-align: center;
 	color: #FFF;
+	font-family: "punavuori";
+	font-weight: bold;
+	text-transform: uppercase;
+	letter-spacing: 2px;
 }
 
 .filter-nav li a:hover {
@@ -198,8 +215,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .filter-nav li.active a {
-
-	color: #FFF;
+	color: #000;
 }
 
 
