--- a/static/assets/js/shadowbox/shadowbox.css
+++ b/static/assets/js/shadowbox/shadowbox.css
@@ -16,9 +16,9 @@
 #sb-title-inner{font-size:16px;}
 #sb-info,#sb-info-inner{height:20px;line-height:20px;}
 #sb-info-inner{font-size:12px;}
-#sb-nav{float:right;height:16px;padding:2px 0;width:45%;}
-#sb-nav a{display:block;float:right;height:16px;width:16px;margin-left:3px;cursor:pointer;background-repeat:no-repeat;}
-#sb-nav-close{background-image:url(close.png);}
+#sb-nav{float:right;height:16px;padding:2px 0;width:50%;}
+#sb-nav a{display:inline-block;height:16px;width:16px;margin-left:3px;cursor:pointer;background-repeat:no-repeat;}
+#sb-nav-close{background-image:url(close.png); float: right;}
 #sb-nav-next{background-image:url(next.png);}
 #sb-nav-previous{background-image:url(previous.png);}
 #sb-nav-play{background-image:url(play.png);}
