--- a/static/assets/css/photographer.css
+++ b/static/assets/css/photographer.css
@@ -10,7 +10,7 @@
 }
 
 body {
-	background: url(../img/bg.jpg);
+	background: #3c3b37;
 	padding-top: 100px;
 }
 
@@ -21,6 +21,7 @@ p {
 h1, h2, h3, h4, h5, h6 {
 	font-weight: 100;
 	margin-bottom: 10px;
+		color: #FFF
 }
 
 .leftline {
@@ -59,7 +60,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .masthead {
-	background: #3c3b37;
+	background: #000;
 	position: fixed;
 	top: 0;
 	left: 0;
@@ -154,7 +155,6 @@ h1, h2, h3, h4, h5, h6 {
 .socials a {
 	float: left;
 	display: block;
-
 	padding: 3px 5px 5px 5px !important;
 	width: 40px;
 	height: 40px;
@@ -216,9 +216,16 @@ h1, h2, h3, h4, h5, h6 {
 
 .filter-nav li.active a {
 	color: #000;
+	border-bottom: 1px solid #FFF;
 }
 
+form {
+	color: #FFF;
+}
 
+.save {
+	margin:  10px 0;
+}
 
 @media (max-width: 767px) {
 	
