--- a/templates/photo/base.html
+++ b/templates/photo/base.html
@@ -38,6 +38,9 @@
 				<a href="#" data-toggle="popover" data-placement="bottom"  data-trigger="focus" data-content="sekaadeputra@gmail.com"><i class="fa fa-envelope"></i></a>
 				{% if user.is_authenticated %}
 				<a href="{% url 'post_new' %}"><i class="fa fa-plus"></i></a>
+				<a href="{% url 'logout' %}"><i class="fa fa-sign-out"></i></a>)
+				{% else %}
+				<a href="{% url 'login' %}" class="top-menu"><i class="fa fa-lock"></i></a>
 				{% endif %}
 			</div>
 			
