fix minor issues

--- a/templates/photo/post_list.html
+++ b/templates/photo/post_list.html
@@ -3,11 +3,12 @@
 {% load staticfiles %}
 	<head>
 
-		<title>Supersized - Full Screen Background Slideshow jQuery Plugin</title>
+		<title>Gallery | Eka Ade Saputra</title>
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
 		<link href="{% static 'assets/css/supersized.css' %}" rel="stylesheet">
+		<link rel="icon" href="{% static 'assets/images/fullscreen-gallery/eas.png' %}" type="image/png" >
 		
 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js"></script>
 		<script type="text/javascript" src="{% static 'assets/js/extras.js' %}"></script>
