--- a/templates/photo/home.html
+++ b/templates/photo/home.html
@@ -7,11 +7,12 @@
 {% load staticfiles %}
 <html>
 	<head>
-		<title>Prologue by HTML5 UP</title>
+		<title>Eka Ade Saputra</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="{% static 'assets/css/main.css' %}" />
+		<link rel="icon" href="{% static 'assets/images/fullscreen-gallery/eas.png' %}" type="image/png" >
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 	</head>
@@ -65,7 +66,7 @@
 						<div class="container">
 
 							<header>
-								<h2 class="alt">Hi! I'm <strong>Eka Ade Saputra</strong>
+								<h2 class="alt">Silent Thinking And Doing </h2>
 							</header>
 
 							<footer>
