--- a/templates/photo/home.html
+++ b/templates/photo/home.html
@@ -24,11 +24,7 @@
 				<div class="top">
 
 					<!-- Logo -->
-						<div id="logo">
-							<span class="image avatar48"><img src="{% static 'assets/images/fullscreen-gallery/eas-logo.png' %}" alt="" /></span>
-							<h1 id="title">Eka Ade Saputra</h1>
-							<p>Hampir Seniman</p>
-						</div>
+						
 
 					<!-- Nav -->
 						<nav id="nav">
@@ -37,8 +33,8 @@
 							-->
 							<ul>
 								<li><a href="#top" id="top-link" class="skel-layers-ignoreHref"><span class="icon fa-home">Home</span></a></li>
+								<li><a href="#about" id="about-link" class="skel-layers-ignoreHref"><span class="icon fa-user">About</span></a></li> 
 								<li><a href="/gallery" id="portfolio-link" class="skel-layers-ignoreHref"><span class="icon fa-th">Gallery</span></a></li>
-								<!-- <li><a href="#about" id="about-link" class="skel-layers-ignoreHref"><span class="icon fa-user">About Me</span></a></li> -->
 								<!-- <li><a href="#contact" id="contact-link" class="skel-layers-ignoreHref"><span class="icon fa-envelope">Contact</span></a></li> -->
 							</ul>
 						</nav>
@@ -66,7 +62,7 @@
 						<div class="container">
 
 							<header>
-								<h2 class="alt">Silent Thinking And Doing </h2>
+								<h3 class="alt">Silent, Thinking, And Doing </h3>
 							</header>
 
 							<footer>
@@ -76,6 +72,14 @@
 						</div>
 					</section>
 
+					<!-- About Me -->
+					<section id="about" class="three">
+						<div class="container">
+					
+			<!-- 				<p>‘BELAJAR LAH DARI KESALAHAN’ Karena kesalahan adalah guru terbaik, serta  pengalaman  yang  harus dijadikan acuan dan pola berfikir untuk  melakukan  sesuatu  hal  yang  lebih positif.Berfikir  lah terlebih dahulu sebelum melakukan sesuatu, dan jadikanlah  pertimbangan dari pengalaman sebelumnya  agar sesuatu  hal  yang  sebelumnya  terjadi, tidak akan terulang kembali. <br>“SILENT THINKING AND DOING”</p>
+ -->
+						</div>
+					</section>
 
 			</div>
 
