--- a/static/assets/css/main.css
+++ b/static/assets/css/main.css
@@ -1,5 +1,14 @@
 @import url("font-awesome.min.css");
 @import url("http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300italic,400,600");
+@font-face {
+    font-family: 'punavuori_00150regular';
+    src: url('punavuor-webfont.woff2') format('woff2'),
+         url('punavuor-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
 
 /*
 	Prologue by HTML5 UP
@@ -1552,7 +1561,7 @@
 
 	body {
 		background: #fff;
-		font-family: 'Source Sans Pro', sans-serif;
+		font-family: 'punavuori_00150regular', sans-serif;
 		font-size: 19pt;
 		font-weight: 300;
 		line-height: 1.75em;
@@ -1593,17 +1602,18 @@
 			color: #333;
 		}
 
-	h2 {
+	h3 {
 		font-size: 2em;
 		letter-spacing: -1px;
 	}
 
-		h2.alt {
-			color: #888;
+		h3.alt {
+			color: #FFF;
+			text-transform: uppercase;
 		}
 
 			h2.alt strong {
-				color: #666;
+				color: #FFF;
 			}
 
 	h3 {
@@ -1703,7 +1713,7 @@
 
 		.image img {
 			display: block;
-			width: 100%;
+			
 		}
 
 		.image.avatar48 {
@@ -1899,10 +1909,12 @@
 		position: relative;
 		display: inline-block;
 		border-radius: 0.35em;
-		color: #fff !important;
+		color: #white !important;
 		text-decoration: none;
 		padding: 0.75em 2.5em 0.75em 2.5em;
-		background-color: #8ebebc;
+		background-color: #000;
+		text-transform: uppercase;
+		opacity: 0.5;
 		border: 0;
 		cursor: pointer;
 		background-image: -moz-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.15)), url("images/overlay.png");
@@ -1920,7 +1932,7 @@
 		input[type="reset"]:hover,
 		button:hover,
 		.button:hover {
-			background-color: #9ececc;
+			background-color: #393939;
 		}
 
 		input[type="button"]:active,
@@ -1953,6 +1965,7 @@
 
 	.icon {
 		text-decoration: none;
+		text-transform: uppercase;
 	}
 
 		.icon:before {
@@ -1986,7 +1999,8 @@
 		-webkit-justify-content: space-between;
 		-ms-justify-content: space-between;
 		justify-content: space-between;
-		background: #222629 url("images/overlay.png");
+		background: #222629 url("../../assets/images/fullscreen-gallery/sidebar.png");
+		background-size: cover;
 		box-shadow: inset -0.25em 0 0.25em 0 rgba(0, 0, 0, 0.1);
 		color: #fff;
 		height: 100%;
@@ -2019,11 +2033,14 @@
 
 		#header .icons {
 			font-size: 0.8em;
-			text-align: center;
+			text-align: left;
+
 		}
 
 			#header .icons a {
-				color: #41484c;
+				margin-bottom: 30px;
+				color: #000;
+				padding-left: 10px;
 				-moz-transition: color 0.35s ease-in-out;
 				-webkit-transition: color 0.35s ease-in-out;
 				-ms-transition: color 0.35s ease-in-out;
@@ -2065,7 +2082,7 @@
 		}
 
 	#nav ul {
-		margin-bottom: 0;
+		margin: 100px 0;
 	}
 
 		#nav ul li a {
@@ -2084,7 +2101,7 @@
 			#nav ul li a span {
 				position: relative;
 				display: block;
-				font-size: 0.8em;
+				font-size: 0.6em;
 			}
 
 				#nav ul li a span:before {
@@ -2103,7 +2120,7 @@
 			}
 
 				#nav ul li a.active span:before {
-					color: #e27689;
+					color: #FFF;
 				}
 
 /* Footer */
@@ -2182,7 +2199,8 @@
 
 			#main > section.one {
 				background-color: #81918E;
-				background-image: url("../../images/banner.jpg");
+				background-image: url("../../assets/images/fullscreen-gallery/bg-eas.png");
+				background-size: cover;
 				height: 654px
 			}
 
@@ -2191,7 +2209,9 @@
 			}
 
 			#main > section.three {
-				background-color: #ecf1f1;
+				background-image: url("../../assets/images/fullscreen-gallery/about.png");
+				background-size: cover;
+				height: 1000px;
 			}
 
 			#main > section.four {
@@ -2469,6 +2489,7 @@
 				-webkit-transform: translateX(0);
 				-ms-transform: translateX(0);
 				transform: translateX(0);
+
 			}
 
 		/* Footer */
@@ -2527,6 +2548,7 @@
 			ul.icons a {
 				width: 2em;
 				font-size: 1.25em;
+				color: #FFF;
 			}
 
 		/* Main */
@@ -2542,6 +2564,27 @@
 				#main section.cover header {
 					padding: 0 1em;
 				}
+
+			#header {
+				background: #222629 url("../../assets/images/fullscreen-gallery/sidebar.png");
+				background-size: cover;
+			}	
+
+			#header .icons {
+				text-align: center;
+			}
+
+			#header .icons a {
+				color: #FFF;
+			}
+
+				#header .icons a:hover {
+					color: #383838;
+				}
+
+			#main > section.three {
+				height: 500px;
+			}
 
 		/* Footer */
 
