--- a/static/assets/css/main.css
+++ b/static/assets/css/main.css
@@ -2212,6 +2212,15 @@
 				background-image: url("../../assets/images/fullscreen-gallery/about.png");
 				background-size: cover;
 				height: 1000px;
+				font-family: serif;
+			}
+
+			#main > section.three p {
+				margin-top: 450px;
+				font-size: 20px;
+				color: #FFF;
+				opacity: 0.9;
+
 			}
 
 			#main > section.four {
@@ -2584,6 +2593,13 @@
 
 			#main > section.three {
 				height: 500px;
+			}
+
+			#main > section.three p {
+				margin-top: 90px;
+				font-size: 15px;
+				color: #FFF;
+				opacity: 0.9;
 			}
 
 		/* Footer */
