--- a/templates/photo/home.html
+++ b/templates/photo/home.html
@@ -11,6 +11,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+		<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 		<link rel="stylesheet" href="{% static 'assets/css/main.css' %}" />
 		<link rel="icon" href="{% static 'assets/images/fullscreen-gallery/eas.png' %}" type="image/png" >
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
@@ -75,9 +76,11 @@
 					<!-- About Me -->
 					<section id="about" class="three">
 						<div class="container">
-					
-			<!-- 				<p>‘BELAJAR LAH DARI KESALAHAN’ Karena kesalahan adalah guru terbaik, serta  pengalaman  yang  harus dijadikan acuan dan pola berfikir untuk  melakukan  sesuatu  hal  yang  lebih positif.Berfikir  lah terlebih dahulu sebelum melakukan sesuatu, dan jadikanlah  pertimbangan dari pengalaman sebelumnya  agar sesuatu  hal  yang  sebelumnya  terjadi, tidak akan terulang kembali. <br>“SILENT THINKING AND DOING”</p>
- -->
+							<div class="row">
+								<div class="col-md-6">					
+									<p>‘BELAJAR LAH DARI KESALAHAN’ Karena kesalahan adalah guru terbaik, serta  pengalaman  yang  harus dijadikan acuan dan pola berfikir untuk  melakukan  sesuatu  hal  yang  lebih positif.Berfikir  lah terlebih dahulu sebelum melakukan sesuatu, dan jadikanlah  pertimbangan dari pengalaman sebelumnya  agar sesuatu  hal  yang  sebelumnya  terjadi, tidak akan terulang kembali. <br><br>“SILENT THINKING AND DOING”</p>
+								</div>
+							</div>
 						</div>
 					</section>
 
@@ -88,7 +91,7 @@
 
 				<!-- Copyright -->
 					<ul class="copyright">
-						<li>&copy; Eka Ade Saputra</li></li>
+						<li>&copy; EAS 2016</li></li>
 					</ul>
 
 			</div>
